--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.AppBarLayout>
+
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
@@ -42,9 +44,10 @@
             android:layout_gravity="right|bottom"
             android:layout_marginBottom="@dimen/md_key_lines"
             android:layout_marginRight="@dimen/md_key_lines"
-            app:srcCompat="@drawable/ic_launcher_foreground"
-            android:tint="@android:color/white"/>
+            android:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_launcher_foreground" />
     </android.support.design.widget.CoordinatorLayout>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -53,4 +56,5 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/menu_navigation" />
+
 </android.support.v4.widget.DrawerLayout>
