--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#5a9216</color>
     <color name="colorAccent">#bef67a</color>
     <color name="white">#ffffff</color>
+    <color name="primary_transparent">#998bc34a</color>
 </resources>
