--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="md_key_lines">16dp</dimen>
     <dimen name="article_key_lines">72dp</dimen>
     <dimen name="nav_header_height">222dp</dimen>
+    <dimen name="activity_padding">16dp</dimen>
 </resources>
