--- a/app/src/main/res/layout/fragment_on_boarding_intro.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_intro.xml
@@ -14,8 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:scaleType="fitXY"
-            android:src="@drawable/green_nature01" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/green_food01" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/second_row"
             android:text="@string/what_answer"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:textColor="@color/white"
             android:textSize="15sp" />
 
