--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="article_key_lines">72dp</dimen>
     <dimen name="nav_header_height">222dp</dimen>
     <dimen name="activity_padding">16dp</dimen>
+    <dimen name="activity_margin_top">8dp</dimen>
 </resources>
