--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -31,6 +31,7 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="fitXY"
+                android:tint="@color/primary_transparent"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
@@ -50,7 +51,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="@dimen/activity_padding">
 
             <TextView
@@ -65,7 +66,7 @@
             <View
                 android:id="@+id/second_row"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="2dp"
                 android:layout_below="@id/first_row"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:background="@android:color/darker_gray" />
@@ -77,7 +78,7 @@
                 android:layout_below="@id/second_row"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
@@ -87,7 +88,7 @@
                 android:layout_below="@id/detail_composted_by"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
@@ -97,7 +98,7 @@
                 android:layout_below="@id/detail_address"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
@@ -107,7 +108,7 @@
                 android:layout_below="@id/detail_postcode"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
@@ -117,37 +118,17 @@
                 android:layout_below="@id/detail_days"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
-                tools:text="@string/app_name" />
-
-            <TextView
-                android:id="@+id/detail_citymap"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/detail_hours"
-                android:layout_marginTop="@dimen/activity_margin_top"
-                android:textColor="@color/orange"
-                android:textSize="15sp"
-                tools:text="@string/app_name" />
-
-            <TextView
-                android:id="@+id/detail_website"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/detail_citymap"
-                android:layout_marginTop="@dimen/activity_margin_top"
-                android:textColor="@color/orange"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
                 android:id="@+id/detail_materials"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/detail_website"
+                android:layout_below="@id/detail_hours"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
@@ -157,7 +138,7 @@
                 android:layout_below="@id/detail_materials"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
@@ -167,7 +148,7 @@
                 android:layout_below="@id/detail_months"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
@@ -177,7 +158,7 @@
                 android:layout_below="@id/detail_requirements"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
 
             <TextView
@@ -187,8 +168,62 @@
                 android:layout_below="@id/detail_board"
                 android:layout_marginTop="@dimen/activity_margin_top"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/twenty_sp"
                 tools:text="@string/app_name" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/detail_bottom_row"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/detail_council"
+                android:layout_marginTop="@dimen/activity_padding"
+                app:cardCornerRadius="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/activity_padding">
+
+                    <TextView
+                        android:id="@+id/detail_website"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/twenty_sp"
+                        tools:text="@string/app_name"
+                        tools:textColor="@color/black" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/darker_gray" />
+
+                    <TextView
+                        android:id="@+id/detail_citymap"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/twenty_sp"
+                        tools:text="@string/app_name"
+                        tools:textColor="@color/black" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@id/detail_bottom_row"
+                android:layout_marginTop="@dimen/activity_padding"
+                android:background="@android:color/darker_gray" />
 
         </RelativeLayout>
 
